# VSCodeSDL

./: CMakeLists.txt
src/: MyClass.hpp  main.cpp
